example/httpbin/route-httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-route
  labels:
    app: httpbin
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-system
  hostnames: ["*.httpbin.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
      method: GET
    backendRefs:
      - name: httpbin
        port: 80
